Fixing regression bug 179918. HTML script elements with either a 'for' or 'event' attribute wouldn't execute, they were treated as event handler scripts, even if only one of the attributes were present. r=bugmail@sicking.cc, sr=bzbarsky@mit.edu, a=asa@mozilla.org